--- a/_diary/2025-11-15-firstdi.md
+++ b/_diary/2025-11-15-firstdi.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "blog te1s1t"
-subtitle: "니들은 이런123거 없지?"
+subtitle: "테스트 되는지 안되는지 부3제목"
 categories:
+permalink: "post/test"
 ---
 
-# 1. APL이 뭔데 
-똥 ㅋㅋ 
+test
