--- a/_diary/2025-11-15-firstdia.md
+++ b/_diary/2025-11-15-firstdia.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "blog tes1t"
-subtitle: "니들은 이런거 없지?"
+subtitle: "테스트 되는지 안되는지 부제1목"
 categories:
+permalink: "post/t4st"
 ---
 
-# 1. APL이 뭔데 
-똥 ㅋㅋ 
+test
