--- a/_posts/2025-11-15-text.md
+++ b/_posts/2025-11-15-text.md
@@ -1,12 +1,11 @@
 ---
-title: /whoami
-layout: default
-permalink: /whoami
+layout: post
+title:  "[[Read me]]"
+subtitle: "Read me, 나에 대해"
+categories:
+permalink: "main/Readme"
 ---
-<p align="center">
-<img src="/assets/images/com.png" width="50%" height="50%"/>
-</p>
-
+ 
 # 수 없이 깊은 네트워크를 타고 온 이들에게
 
 저는 컴퓨터를 사랑하는 사람입니다.
