--- a/_posts/2025-11-15-text.md
+++ b/_posts/2025-11-15-text.md
@@ -1,23 +1,9 @@
 ---
 layout: post
-title:  "[[Read me]]"
-subtitle: "Read me, 나에 대해"
+title:  "null"
+subtitle: "null"
 categories:
-permalink: "main/Readme"
+permalink: "null"
 ---
  
-# 수 없이 깊은 네트워크를 타고 온 이들에게
-
-저는 컴퓨터를 사랑하는 사람입니다.
-저의 정체성: **_씹덕 퀴어 정신병자 닭장애호가 컴공 기안84 노숙자_**
-
-각종 사이버쓰레기장 인터넷 커뮤니티 유경험자이며 의도적인 트롤링 개그 다수
-
-그러나 실제로는 극우적 레토릭과 사상에 동의하지 않으며 스스로 사고하지 않고 어디서 외운 말만 반복하는 사람들 진영 상관 없이 싫어합니다. 범죄 아닌 이상 웬만한 분쟁은 UFC 열렸다고 생각하고 구경함
-
-TW 각종 좆같은 사진들과 NSFW+ 근친 퍼리 유부녀사랑 닭장단 게이 후타 보추 고어 료나 학대 etc
-## 말 그대로 타임라인에 뭐가 나올지 모름
-#### 저를 구독하거나 맞팔하는 것은 당신의 선택임
-
-드림 합니다
-몰라레후
+null
