--- a/_diary/2025-11-17-text.md
+++ b/_diary/2025-11-17-text.md
@@ -15,7 +15,7 @@ permalink: "post/2"
 내가 감당해야할 건보료와 세금 집값차값.. 어쨌든 돈 내야하는 것들을 돈을 내고 끝을 내면
 죽음이 기다리고 있지 않을까 
 
-![[/assets/images/nepe.png]]<img src="/neh4nsh1ga.github.io/assets/images/nepe.png" alt="Image">
+<img src="/neh4nsh1ga.github.io/assets/images/nepe.png" alt="Image">
 
 내가 기다리는 죽음, 내가 바라는 죽음은 나의 사랑하는 아이가 나를 껴안아 주는 것을 원한다
 지옥인지 천국인지 알수 없지만 (그리고 알고싶지도 않지만) 만약 지옥이라면 그저 나 홀로 떠나가고 싶다. 내가 사랑하는 아이는 너무나도 착하고 똑똑한 아이였기 때문에, 이렇게 쓰니 그 아이가 죽은 것 같지만 그 아이는 아직 살아있고 이제 두살이다.
